// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Setup Environment during a transaction should match the snapshot on file (styles) 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 .alert-light {
  padding-top: 5px;
  padding-bottom: 0px;
  margin-bottom: 0px;
}

.c0 {
  margin-top: calc(50px + 26px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .nav-tabs {
  height: 28px !important;
  font-size: 0.75em;
}

.c0 a[role="tab"] {
  padding-bottom: 0px;
  padding-top: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px;
  border-style: solid;
  border-width: 1px;
  border-color: #000000;
}

.c2 {
  width: 100%;
  margin-left: 10px;
  margin-right: 10px;
  text-align: center;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  list-style-position: outside;
  overflow: scroll;
  max-height: 200px;
  border-style: solid;
  border-color: #808080;
  border-width: 10px;
}

.c4 {
  padding-left: 0px;
  min-width: 200px;
  background: #808080;
  padding-top: 0px;
}

.c4 li:last-child {
  margin-bottom: 0px;
}

<div>
  <div>
    MockHeader
  </div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2 alert alert-success"
      >
        <div>
          Some Title
        </div>
      </div>
      <div
        class="c3 overflow-auto"
        size="200"
      >
        <div
          class="c4"
        >
          <div>
            MockListItem
          </div>
          <div>
            MockListItem
          </div>
          <div>
            MockListItem
          </div>
        </div>
      </div>
    </div>
    <div
      class="c5"
    >
      <div
        class="alert alert-light"
        data-testid="alert"
        role="alert"
      >
         
      </div>
    </div>
    <div>
      MockHelp
    </div>
  </div>
</div>
`;

exports[`Setup Environment outside of a transaction during an api error should match the snapshot on file (styles) 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 .alert-light {
  padding-top: 5px;
  padding-bottom: 0px;
  margin-bottom: 0px;
}

.c0 {
  margin-top: calc(50px + 26px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .nav-tabs {
  height: 28px !important;
  font-size: 0.75em;
}

.c0 a[role="tab"] {
  padding-bottom: 0px;
  padding-top: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px;
  border-style: solid;
  border-width: 1px;
  border-color: #000000;
}

.c2 {
  width: 100%;
  margin-left: 10px;
  margin-right: 10px;
  text-align: center;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  list-style-position: outside;
  overflow: scroll;
  max-height: 200px;
  border-style: solid;
  border-color: #808080;
  border-width: 10px;
}

.c4 {
  padding-left: 0px;
  min-width: 200px;
  background: #808080;
  padding-top: 0px;
}

.c4 li:last-child {
  margin-bottom: 0px;
}

<div>
  <div>
    MockHeader
  </div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2 alert alert-success"
      >
        <div>
          Some Title
        </div>
      </div>
      <div
        class="c3 overflow-auto"
        size="200"
      >
        <div
          class="c4"
        >
          <div>
            MockListItem
          </div>
          <div>
            MockListItem
          </div>
          <div>
            MockListItem
          </div>
        </div>
      </div>
    </div>
    <div
      class="c5"
    >
      <div
        class="alert alert-light"
        data-testid="alert"
        role="alert"
      >
         
      </div>
    </div>
    <div>
      MockHelp
    </div>
  </div>
</div>
`;

exports[`Setup Environment outside of a transaction outside of an api error 3 items in the list should match the snapshot on file (styles) 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 .alert-light {
  padding-top: 5px;
  padding-bottom: 0px;
  margin-bottom: 0px;
}

.c0 {
  margin-top: calc(50px + 26px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .nav-tabs {
  height: 28px !important;
  font-size: 0.75em;
}

.c0 a[role="tab"] {
  padding-bottom: 0px;
  padding-top: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px;
  border-style: solid;
  border-width: 1px;
  border-color: #000000;
}

.c2 {
  width: 100%;
  margin-left: 10px;
  margin-right: 10px;
  text-align: center;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  list-style-position: outside;
  overflow: scroll;
  max-height: 200px;
  border-style: solid;
  border-color: #808080;
  border-width: 10px;
}

.c4 {
  padding-left: 0px;
  min-width: 200px;
  background: #808080;
  padding-top: 0px;
}

.c4 li:last-child {
  margin-bottom: 0px;
}

<div>
  <div>
    MockHeader
  </div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2 alert alert-success"
      >
        <div>
          Some Title
        </div>
      </div>
      <div
        class="c3 overflow-auto"
        size="200"
      >
        <div
          class="c4"
        >
          <div>
            MockListItem
          </div>
          <div>
            MockListItem
          </div>
          <div>
            MockListItem
          </div>
        </div>
      </div>
    </div>
    <div
      class="c5"
    >
      <div
        class="alert alert-light"
        data-testid="alert"
        role="alert"
      >
         
      </div>
    </div>
    <div>
      MockHelp
    </div>
  </div>
</div>
`;

exports[`Setup Environment outside of a transaction outside of an api error no items in the list should match the snapshot on file (styles) 1`] = `
.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 .alert-light {
  padding-top: 5px;
  padding-bottom: 0px;
  margin-bottom: 0px;
}

.c0 {
  margin-top: calc(50px + 26px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .nav-tabs {
  height: 28px !important;
  font-size: 0.75em;
}

.c0 a[role="tab"] {
  padding-bottom: 0px;
  padding-top: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px;
  border-style: solid;
  border-width: 1px;
  border-color: #000000;
}

.c2 {
  width: 100%;
  margin-left: 10px;
  margin-right: 10px;
  text-align: center;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  list-style-position: outside;
  overflow: scroll;
  max-height: 200px;
  border-style: solid;
  border-color: #808080;
  border-width: 10px;
}

.c4 {
  padding-left: 0px;
  min-width: 200px;
  background: #808080;
  padding-top: 0px;
}

.c4 li:last-child {
  margin-bottom: 0px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  min-height: 40px;
  background: #FFFFFF;
  padding: 12px;
  min-width: 220px;
  color: #006600;
  margin-bottom: 0px;
}

<div>
  <div>
    MockHeader
  </div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2 alert alert-success"
      >
        <div>
          Some Title
        </div>
      </div>
      <div
        class="c3 overflow-auto"
        size="200"
      >
        <div
          class="c4"
        >
          <li
            class="c5"
          >
            I'm Right Here
          </li>
        </div>
      </div>
    </div>
    <div
      class="c6"
    >
      <div
        class="alert alert-light"
        data-testid="alert"
        role="alert"
      >
         
      </div>
    </div>
    <div>
      MockHelp
    </div>
  </div>
</div>
`;

exports[`Setup Environment pending api load should match the snapshot on file (styles) 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 .alert-light {
  padding-top: 5px;
  padding-bottom: 0px;
  margin-bottom: 0px;
}

.c0 {
  margin-top: calc(50px + 26px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .nav-tabs {
  height: 28px !important;
  font-size: 0.75em;
}

.c0 a[role="tab"] {
  padding-bottom: 0px;
  padding-top: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px;
  border-style: solid;
  border-width: 1px;
  border-color: #000000;
}

.c2 {
  width: 100%;
  margin-left: 10px;
  margin-right: 10px;
  text-align: center;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  list-style-position: outside;
  overflow: scroll;
  max-height: 200px;
  border-style: solid;
  border-color: #808080;
  border-width: 10px;
}

.c4 {
  padding-left: 0px;
  min-width: 200px;
  background: #808080;
  padding-top: 0px;
}

.c4 li:last-child {
  margin-bottom: 0px;
}

<div>
  <div>
    MockHeader
  </div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2 alert alert-success"
      >
        <div>
          Some Title
        </div>
      </div>
      <div
        class="c3 overflow-auto"
        size="200"
      >
        <div
          class="c4"
        >
          <div>
            MockListItem
          </div>
          <div>
            MockListItem
          </div>
          <div>
            MockListItem
          </div>
        </div>
      </div>
    </div>
    <div
      class="c5"
    >
      <div
        class="alert alert-light"
        data-testid="alert"
        role="alert"
      >
         
      </div>
    </div>
    <div>
      MockHelp
    </div>
  </div>
</div>
`;
